example of date pipe usage added

--- a/AngularPipesExample/src/app/app.component.html
+++ b/AngularPipesExample/src/app/app.component.html
@@ -2,3 +2,5 @@
 <app-pipes-test></app-pipes-test>
 <hr/>
 <app-percent-pipe-test></app-percent-pipe-test>
+<hr/>
+<app-date-pipe-test></app-date-pipe-test>
